# igcc

./: .gitignore  CHANGELOG.md  Makefile  README.md  README.txt  igcc  igcc_run.py  pyproject.toml  test-igcc  test-igcc-slow
.github/workflows/: main.yml
config/: config.yaml
igcc/: dot_commands.py  run.py  source_code.py  utils.py
igcc/assets/: boilerplate.h  config.yaml
libigcc/: __init__.py  boilerplate.h  colors.py  copying.py  dot_commands.py  run.py  source_code.py  version.py
test/: lib_test.sh  unit_tests.py
test/cpp/: hello.h  mylib.cpp  mylib.h
test/cpp1/: hello.h  mylib.cpp
test/cpp2/: world.h
tests/lib-test/: mylib.h  run.sh
