# this is the default behaviour (can be omitted)
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "igcc"
version = "0.2.2"
description = "Interactive GCC - C/C++ REPL"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "PyYAML",
    "rich",
    "pyreadline3; platform_system=='Windows'",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
dev = ["black", "isort", "autoflake", "ruff"]

[project.scripts]
igcc = "igcc.run:repl"

[tool.setuptools.package-data]
igcc = ["assets/*"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modern syntax)
    "PERF", # performance rules
    "FURB", # refurb
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
    "N802",  # function names
]